# Multi-Agent-Copilot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
apps/agent-service/: Dockerfile  pyproject.toml
apps/agent-service/app/: config.py  main.py
apps/agent-service/app/agents/: copilot_agent.py
apps/agent-service/app/graph/: graph_builder.py  node.py  state.py
apps/agent-service/app/schemas/: chat.py
apps/agent-service/app/services/: llm_service.py
apps/agent-service/app/tools/: expense_tool.py
apps/api/: .air.toml  Dockerfile  go.mod  go.sum
apps/api/cmd/server/: main.go
apps/api/dto/: transaction_dto.go
apps/api/handlers/: auth_handler.go  group_handler.go  transaction_handler.go
apps/api/internal/auth/: jwt.go  password.go
apps/api/internal/config/: config.go
apps/api/internal/db/: postgres.go
apps/api/internal/db/migrations/: 20260415172225_create_transactions.down.sql  20260415172225_create_transactions.up.sql  20260417170710_create_group_expense.down.sql  20260417170710_create_group_expense.up.sql  20260419094852_add_user_auth.up.sql
apps/api/internal/logger/: logger.go
apps/api/internal/middleware/: auth.go  logger.go  request_id.go
apps/api/internal/validator/: validator.go
apps/api/models/: expense.go  group.go  split.go  transaction.go
apps/api/pkg/errors/: errors.go
apps/api/pkg/response/: response.go
apps/api/repository/: group_repo.go  transaction_repo.go  user_repo.go
apps/api/routes/: router.go
apps/api/service/: group_service.go  transaction_service.go  user_service.go
